--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.8.6",
+    "@tanstack/react-query-devtools": "^5.8.6",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-slider": "^2.0.6",
     "react-transition-group": "^4.4.5",
-    "swr": "^2.2.4",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
