--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^5.8.6",
     "@tanstack/react-query-devtools": "^5.8.6",
     "axios": "^1.6.2",
+    "js-cookie": "^3.0.5",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
