--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "js-cookie": "^3.0.5",
     "next": "14.0.2",
     "react": "^18",
+    "react-click-away-listener": "^2.2.3",
     "react-dom": "^18",
+    "react-modal": "^3.16.1",
     "react-slider": "^2.0.6",
     "react-transition-group": "^4.4.5",
     "zustand": "^4.4.6"
