--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.2",
     "js-cookie": "^3.0.5",
     "next": "14.0.2",
+    "notistack": "^3.0.1",
     "react": "^18",
     "react-click-away-listener": "^2.2.3",
     "react-dom": "^18",
