--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-modal": "^3.16.1",
     "react-slider": "^2.0.6",
     "react-transition-group": "^4.4.5",
+    "socket.io-client": "^4.7.2",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
