--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "@tanstack/react-query": "^5.8.6",
     "@tanstack/react-query-devtools": "^5.8.6",
-    "axios": "^1.6.2",
+    "axios": "^1.7.2",
     "js-cookie": "^3.0.5",
     "next": "14.0.2",
+    "next-auth": "^4.24.7",
     "notistack": "^3.0.1",
     "react": "^18",
     "react-click-away-listener": "^2.2.3",
